syntax = "proto2";

package disks;

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/services/disks/config";

////////////////////////////////////////////////////////////////////////////////

message DisksConfig {
    optional uint32 DefaultBlockSize = 1 [default = 4096];
    optional string DeletedDiskExpirationTimeout = 2 [default = "30m"];
    optional string ClearDeletedDisksTaskScheduleInterval = 3 [default = "1m"];
    optional uint32 ClearDeletedDisksLimit = 4 [default = 1000];
    optional string StorageFolder = 5 [default = "disks"];
    optional bool DisableOverlayDisks = 6;
    repeated string OverlayDisksFolderIdWhitelist = 7;
    repeated string OverlayDisksFolderIdBlacklist = 8;
    optional string EndedMigrationExpirationTimeout = 9 [default="30m"];
    optional bool EnableOverlayDiskRegistryBasedDisks = 10;
    optional string CreationAndDeletionAllowedOnlyForDisksWithIdPrefix = 11;
    optional bool DisableDiskRegistryBasedDisks = 12;
    repeated string DiskRegistryBasedDisksFolderIdAllowList = 13;
}
